--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -126,7 +126,7 @@
 
 // Example style for Sdm (can be removed if not needed).
 .item-formula {
-  flex: 0 0 120px;
+  flex: 0 0 125px;
   padding: 0 8px;
 }
 
@@ -210,4 +210,23 @@ input:checked + .slider .fa-cog {
 
 .saveIcon {
   font-size: 16px;
+}
+
+.list-border {
+ // border: 1px solid colors.$c-light-border;
+  border: 1px solid colors.$c-light-border;
+}
+
+.items-list .item.items-header.caravan-item-header:last-child {
+  border-bottom: 2px groove colors.$c-groove;
+}
+
+
+
+li.item {
+  margin-bottom: 0;
+}
+
+.items-list .item:hover {
+  background-color: rgba(184, 78, 255, 0.1) !important; /* Your ultraviolet color with transparency */
 }
