--- a/templates/actor/traits.hbs
+++ b/templates/actor/traits.hbs
@@ -11,7 +11,7 @@
         {{#if @root.editable}}
         <a
           class='item-control item-create'
-          title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Trait')}}"
+          data-tooltip="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Trait')}}"
           data-action='createDoc'
           data-document-class='Item'
           data-type='trait'
