--- a/templates/item/burden/header.hbs
+++ b/templates/item/burden/header.hbs
@@ -1,5 +1,5 @@
 <header class='sheet-header'>
-  <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' title='{{item.name}}' />
+  <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' data-tooltip='{{item.name}}' />
   <div class='header-fields mt-10'>
     <div class='document-name'>
       <input name='name' type='text' value='{{item.name}}' placeholder='Name' />
