--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -252,3 +252,19 @@ section.tab.features {
 
   }
 }
+
+.items-list .item:nth-child(even) {
+  background-color: rgba(0, 0, 0, 0.02); /* Light gray for even items */
+}
+
+.items-list .item:nth-child(odd) {
+  background-color: rgba(0, 0, 0, 0.05); /* Slightly darker for odd items */
+}
+
+.theme-dark .items-list .item:nth-child(even) {
+  background-color: rgba(255, 255, 255, 0.02) !important;
+}
+
+.theme-dark .items-list .item:nth-child(odd) {
+  background-color: rgba(255, 255, 255, 0.05) !important;
+}
