--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -4,12 +4,12 @@
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
       {{!-- <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div> --}}
-      <div class='item-formula' title="{{localize 'SDM.BurdensPenalty'}}">
+      <div class='item-formula' data-tooltip="{{localize 'SDM.BurdensPenalty'}}">
         {{localize 'SDM.InventoryBurdens'}} [{{@root.burdenSlotsTaken}}{{#if (ne @root.actor.type 'npc')}}/{{@root.system.burden_slots}}{{/if}}]
       </div>
       <div class='item-controls'>
         {{#if @root.editable}}
-        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Burden')}}"
+        <a class='item-control item-create' data-tooltip="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Burden')}}"
           data-action='createDoc' data-document-class='Item' data-type='burden'>
           <i class='fas fa-plus'></i>
           {{localize 'DOCUMENT.New' type=(localize 'TYPE.Burden' )}}
@@ -25,7 +25,7 @@
          {{> ($$ "actor/trait") trait=burden }}
       {{/if}}
        {{#if (eq burden.type 'burden')}}
-        <li class='item flexrow' data-item-id='{{burden._id}}' data-drag='true' data-document-class='Item' title="{{getItemTitle burden}}">
+        <li class='item flexrow' data-item-id='{{burden._id}}' data-drag='true' data-document-class='Item' data-tooltip="{{getItemTitle burden}}">
           <div class='item-name'>
             <div class='item-image'>
               <img src='{{burden.img}}' width='24' height='24' />
@@ -34,11 +34,11 @@
           </div>
           <div class='item-controls'>
             {{#if @root.editable}}
-            <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize (lookup @root.config.itemType burden.type))}}'
+            <a class='item-control item-edit' data-tooltip='{{localize "DOCUMENT.Update" type=(localize (lookup @root.config.itemType burden.type))}}'
               data-action='viewDoc'>
               <i class='fas fa-edit'></i>
             </a>
-            <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize (lookup @root.config.itemType burden.type))}}'
+            <a class='item-control item-delete' data-tooltip='{{localize "DOCUMENT.Delete" type=(localize (lookup @root.config.itemType burden.type))}}'
               data-action='deleteDoc'>
               <i class='fas fa-trash'></i>
             </a>
