--- a/templates/actor/effects.hbs
+++ b/templates/actor/effects.hbs
@@ -31,7 +31,7 @@
             {{else if (eq section.type "temporary")}}
               data-duration.rounds="1"
             {{/if}}
-            title='{{localize "DOCUMENT.Create" type=(localize 'TYPE.Effect')}}'
+            data-tooltip='{{localize "DOCUMENT.Create" type=(localize 'TYPE.Effect')}}'
           >
             <i class='fas fa-plus'></i>
             {{localize 'DOCUMENT.New' type=(localize 'TYPE.Effect')}}
@@ -61,7 +61,7 @@
                 <a
                   class='effect-control'
                   data-action='toggleEffect'
-                  title='{{localize "SDM.Effect.Toggle"}}'
+                  data-tooltip='{{localize "SDM.Effect.Toggle"}}'
                 >
                   <i class='fas {{#if effect.disabled}}fa-check{{else}}fa-times{{/if}}'></i>
                 </a>
@@ -69,7 +69,7 @@
                 <a
                   class='effect-control'
                   data-action='viewDoc'
-                  title='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Effect')}}'
+                  data-tooltip='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Effect')}}'
                 >
                   <i class='fas fa-edit'></i>
                 </a>
@@ -77,7 +77,7 @@
                 <a
                   class='effect-control'
                   data-action='deleteDoc'
-                  title='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Effect')}}'
+                  data-tooltip='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Effect')}}'
                 >
                   <i class='fas fa-trash'></i>
                 </a>
