--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -3,7 +3,7 @@
   data-item-id='{{item._id}}'
   data-drag='true'
   data-document-class='Item'
-  title="{{getItemTitle item}}"
+  data-tooltip="{{getItemTitle item}}"
 >
   <div class='item-name'>
     <div class='item-image'>
@@ -23,7 +23,7 @@
         data-action='roll'
         data-type='damage'
         data-label='{{item.name}}'
-        title="{{localize 'SDM.RollType' type=(localize 'SDM.Damage')}}"
+        data-tooltip="{{localize 'SDM.RollType' type=(localize 'SDM.Damage')}}"
       >
         <i class='fa-solid fa-dice-d20 roll-icon'></i>
       </div>
@@ -42,13 +42,33 @@
         data-action='roll'
         data-type='power'
         data-label='{{item.name}}'
-        title="{{localize 'SDM.RollType' type=(localize 'SDM.Power')}}"
+        data-tooltip="{{localize 'SDM.RollType' type=(localize 'SDM.Power')}}"
       >
         <i class='fa-solid fa-dice-d20 roll-icon'></i>
       </div>
       {{/if}}
 
-      {{#if (gt item.system.slots_taken 1)}}[{{item.system.slots_taken}}] {{/if}}
+      {{#if (and
+        (ne actorType 'caravan')
+        (ne item.system.size.unit 'cash')
+        (eq item.system.type 'power_container')
+        item.system.readied
+        (gt item.system.powers.length 0)
+        @root.editable
+      )}}
+      <div
+        class='rollable flexrow'
+        data-action='roll'
+        data-type='power_container'
+        data-label='{{item.name}}'
+        data-tooltip="{{localize 'SDM.RollType' type=(localize 'SDM.PowerContainer')}}"
+      >
+        <i class='fa-solid fa-book-sparkles roll-icon'></i>
+      </div>
+      {{/if}}
+
+      {{#if (and (gt item.system.slots_taken 1) (ne item.system.size.unit 'sacks'))}}[{{item.system.slots_taken}}] {{/if}}
+      {{#if (and (gt item.system.slots_taken 1) (eq item.system.size.unit 'sacks'))}}[{{toSacks item.system.slots_taken}}] {{/if}}
 
       {{#if (eq item.system.size.unit 'cash')}} {{item.system.quantity}} {{/if}}
       {{item.name}}
@@ -74,9 +94,9 @@
         class="fa-regular fa-shield {{ifThen item.system.readied 'readied' 'not-readied'}}"
         data-action="toggleReadied"
         {{#if item.system.readied}}
-          title="{{localize 'SDM.ItemReadied' }}"
+          data-tooltip="{{localize 'SDM.ItemReadied' }}"
         {{else}}
-          title="{{localize 'SDM.ItemNotReadied'}}"
+          data-tooltip="{{localize 'SDM.ItemNotReadied'}}"
         {{/if}}
       >
       </i>
@@ -86,14 +106,14 @@
       <i
         class="fa-regular fa-exchange"
         data-action="transferItem"
-        title="{{localize 'DOCUMENT.Transfer'
+        data-tooltip="{{localize 'DOCUMENT.Transfer'
         type=(localize 'TYPE.Item' )}}"
       >
       </i>
     </a>
     <a
       class='item-control item-edit'
-      title='{{localize "DOCUMENT.Update"
+      data-tooltip='{{localize "DOCUMENT.Update"
       type=(localize "TYPE.Item")}}'
       data-action='viewDoc'
     >
@@ -102,7 +122,7 @@
 
     <a
       class='item-control item-delete'
-      title='{{localize "DOCUMENT.Delete" type=(localize "TYPE.Item")}}'
+      data-tooltip='{{localize "DOCUMENT.Delete" type=(localize "TYPE.Item")}}'
       data-action='deleteDoc'
     >
       <i class='fas fa-trash'></i>
