--- a/templates/actor/items.hbs
+++ b/templates/actor/items.hbs
@@ -3,15 +3,16 @@
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
-      <div class='item-formula'
-      >{{localize 'SDM.InventoryItems'}} [{{@root.itemSlotsTaken}}{{#if (
-        eq @root.actor.type 'character')}}/{{@root.system.item_slots}}{{/if}}]
+      <div class='item-formula'>
+      {{localize 'SDM.InventoryItems'}} [{{@root.itemSlotsTaken}}{{#if (
+        eq @root.actor.type 'character')}}/{{@root.system.item_slots}}{{/if}}{{#if (
+          gt @root.system.packed_item_slots_bonus 0)}}<i class='fa-regular fa-shield readied'></i> {{@root.packedSlotsTaken}}/{{@root.system.packed_item_slots_bonus}}<i class='fa-regular fa-shield not-readied'></i>{{/if}}]
       </div>
       <div class='item-controls'>
         {{#if @root.editable}}
         <a
           class='item-control item-create'
-          title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Item' )}}"
+          data-tooltip="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Item' )}}"
           data-action='createDoc'
           data-document-class='Item'
           data-type='gear'
