--- a/templates/actor/spells.hbs
+++ b/templates/actor/spells.hbs
@@ -10,7 +10,7 @@
           {{#if @root.editable}}
             <a
               class='item-control item-create'
-              title='{{localize "DOCUMENT.Create" type='Spell'}}'
+              data-tooltip='{{localize "DOCUMENT.Create" type='Spell'}}'
               data-action='createDoc'
               data-document-class='Item'
               data-type='spell'
@@ -27,7 +27,7 @@
           <div class='item-name flexrow'>
             <div class='item-image'>
               <a class='rollable' data-roll-type='item' data-action='roll'>
-                <img src='{{item.img}}' title='{{item.name}}' width='24' height='24' />
+                <img src='{{item.img}}' data-tooltip='{{item.name}}' width='24' height='24' />
               </a>
             </div>
             <div>
@@ -35,13 +35,13 @@
             </div>
           </div>
           <div class='item-controls'>
-            <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type='spell'}}' data-action='viewDoc'>
+            <a class='item-control item-edit' data-tooltip='{{localize "DOCUMENT.Update" type='spell'}}' data-action='viewDoc'>
               <i class='fas fa-edit'></i>
             </a>
             {{#if @root.editable}}
               <a
                 class='item-control item-delete'
-                title='{{localize "DOCUMENT.Delete" type='spell'}}'
+                data-tooltip='{{localize "DOCUMENT.Delete" type='spell'}}'
                 data-action='deleteDoc'
               >
                 <i class='fas fa-trash'></i>
