--- a/templates/actor/trait.hbs
+++ b/templates/actor/trait.hbs
@@ -3,7 +3,7 @@
   data-item-id='{{trait._id}}'
   data-drag='true'
   data-document-class='Item'
-  title='{{getItemTitle trait}}'
+  data-tooltip='{{getItemTitle trait}}'
 >
   <div class='item-name'>
     <div class='item-image'>
@@ -16,7 +16,7 @@
           data-action='roll'
           data-type='power'
           data-label='{{trait.name}}'
-          title='{{localize "SDM.RollType" type=(localize 'SDM.Power')}}'
+          data-tooltip='{{localize "SDM.RollType" type=(localize 'SDM.Power')}}'
         >
           <i class='fa-solid fa-dice-d20 roll-icon'></i>
         </div>
@@ -32,14 +32,14 @@
     {{#if @root.editable}}
     <a
       class='item-control item-edit'
-      title='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Trait')}}'
+      data-tooltip='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Trait')}}'
       data-action='viewDoc'
     >
       <i class='fas fa-edit'></i>
     </a>
       <a
         class='item-control item-delete'
-        title='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Trait')}}'
+        data-tooltip='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Trait')}}'
         data-action='deleteDoc'
       >
         <i class='fas fa-trash'></i>
