--- a/templates/item/description.hbs
+++ b/templates/item/description.hbs
@@ -1,5 +1,5 @@
 {{! Description Tab }}
-<section class='tab {{tab.cssClass}}' data-group='primary' data-tab='description'>
+<section class='tab scrollable {{tab.cssClass}}' data-group='primary' data-tab='description'>
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
   {{#if editable}}
     <prose-mirror
