--- a/css/sdm.css
+++ b/css/sdm.css
@@ -896,6 +896,8 @@ section.tab.features {
   background-size: 30px;
   border: none;
   margin-right: 5px;
+  display: flex;
+  align-items: center;
 }
 .sdm .items-list .item-prop {
   text-align: center;
