--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -92,6 +92,8 @@
         background-size: 30px;
         border: none;
         margin-right: 5px;
+        display: flex;
+        align-items: center;
       }
     }
   }
