--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -7,7 +7,7 @@
 >
   <div class='item-name'>
     <div class='item-image'>
-      <img src='{{item.img}}' width='24' height='24' />
+      <img src='{{item.img}}' width='24' height='24' data-tooltip="{{item.name}}"/>
     </div>
     <div class="flexrow">
       {{#if (and
