--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -268,3 +268,11 @@ section.tab.features {
 .theme-dark .items-list .item:nth-child(odd) {
   background-color: rgba(255, 255, 255, 0.05) !important;
 }
+
+span.system-info {
+  a.notification-pip {
+    right: -15px !important;
+    top: 2px !important;
+    background: unset !important;
+  }
+}
