--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -274,5 +274,6 @@ span.system-info {
     right: -15px !important;
     top: 2px !important;
     background: unset !important;
+    text-shadow: unset !important;
   }
 }
